--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 
-<body>
+<body dir="rtl">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
